inc += '.'

testBiarc = executable('testBiarc',
				'testBiarc.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testBiarc', testBiarc)

testClothoid = executable('testClothoid',
				'testClothoid.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testClothoid', testClothoid)

testDistance = executable('testDistance',
				'testDistance.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testDistance', testDistance)

testG2 = executable('testG2',
				'testG2.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testG2', testG2)

testG2plot = executable('testG2plot',
				'testG2plot.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testG2plot', testG2plot)

testG2stat = executable('testG2stat',
				'testG2stat.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testG2stat', testG2stat)

testG2stat2arc = executable('testG2stat2arc',
				'testG2stat2arc.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testG2stat2arc', testG2stat2arc)

testG2statCLC = executable('testG2statCLC',
				'testG2statCLC.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testG2statCLC', testG2statCLC)

testIntersect = executable('testIntersect',
				'testIntersect.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testIntersect', testIntersect)

testPolyline = executable('testPolyline',
				'testPolyline.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testPolyline', testPolyline)

testTriangle2D = executable('testTriangle2D',
				'testTriangle2D.cc',
				include_directories : inc,
				dependencies: [lib],
				install: false)

test('testTriangle2D', testTriangle2D)
